@@ -14,7 +14,7 @@ version = 1
 Catalyst                 = 5.64
 CSS::Minifier::XS        = 0
 Moose                    = 0
-Path::Class::File        = 0.17
+Path::Class::Dir         = 0.17
 URI                      = 0
 autodie                  = 0
 Catalyst::Test           = 0
@@ -24,4 +24,5 @@ HTTP::Headers            = 0
 HTTP::Request            = 0
 parent                   = 0
 Test::More               = 0.88
+MooseX::Aliases          = 0
 
